--- a/2. Основы JS/1. Привет, мир!/alert.html
+++ b/2. Основы JS/1. Привет, мир!/alert.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <!-- <script>
+        alert( "Я JavaScript!" );
+      </script> -->
+    <script src="alert.js"></script>
 </body>
 </html>
